# anim-shader-demo

./: CMakeLists.txt  README.md
include/: attribute.h  buffer.h  cube.h  light.h  load.h  load_shader.h  loader.h  mesh.h  model.h  shader.h  shadow.h  ui.h  项目头文件.md
include/glad/: glad.h
resource/model/: 模型数据.md
resource/shader/: depth.vs  depth_frag.vs  depth_point.fs  depth_point.vs  pixel.vs  pixel_cube.vs  pixel_simple.vs  vertex.vs  vertex_cube.vs  着色器文件.md
resource/texture/: 纹理.md
src/: cube.cpp  glad.c  load.cpp  main.cpp
src/graghics/: buffer.cpp  light.cpp  load_shader.cpp  mesh.cpp  model.cpp  shader.cpp  shadow.cpp  画面渲染组件.md
src/load/: load_model.cpp  load_texture.cpp  导入模型数据.md
src/math/: 数学工具库.md
src/test/: bufferfill_test.cpp  cube_test.cpp  loadtest.cpp
src/tool/: cube.cpp
src/widget/: ui.cpp  ui控件.md
